hphp/test/zend/good/ext/posix/tests/posix_getegid_basic.php
<?php
var_dump(posix_getegid());
?>