hphp/test/zend/bad/ext/mbstring/tests/mb_output_handler_shift_jis.php
<?php
// Shift_JIS
var_dump("テスト用日本語文字列。このモジュールはPHPにマルチバイト関数を提供します。");
?>
